--- a/democratos/CreateYourLaws/templates/GetForm.html
+++ b/democratos/CreateYourLaws/templates/GetForm.html
@@ -1,1 +1,9 @@
-<p>coucou!</p>
+{% load staticfiles %}
+<form action="{% url 'PostReflection' %}"  method="post" id="{{typeref}}form{{ref.id}}">
+    {{ form.as_p }} 
+    <input type="hidden" name="typeform" value="{{typeref}}f">
+    <input type="hidden" name="typeref" value="{{typeref}}">
+    <input type="hidden" name="ref_id" value="{{ref.id}}">
+    <button type="submit" class="but{{typeref}}" name="{{typeref}}form"> Envoyer </button>
+</form> 
+<script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
