--- a/democratos/CreateYourLaws/templates/UpSection.html
+++ b/democratos/CreateYourLaws/templates/UpSection.html
@@ -70,6 +70,15 @@
                             note:
                         <canvas id="donqst{{x.id}}" name="{{x.approval_ratio}}" class="donut"></canvas>
                         </p>
+                        <p id="devqst{{x.id}}" style='text-align: center;'>
+                        {% if x.nb_exp != 0 or x.nb_q != 0 %}
+                            <div class="GetDebateChild" name="childqst{{x.id}}" id="childqst{{x.id}}"> Voir les réactions à ce commentaire </div>
+                        {% else %}
+                        Poser une question ou commentez cette réaction! <br>
+                            <button class="butexp" type="button" name="qst:exp:{{x.id}}"> Commenter </button>
+                            <button class="butqst" type="button" name="qst:qst:{{x.id}}">Poser votre question </button>
+                            <p id="qstaskform{{x.id}}"></p>
+                        {% endif %}
                     {% elif x|isinst:'CreateYourLaws.models.Explaination' %}
                         <p class="vote">
                         <input type="image" src="{% static 'icons/thumbs_up.png' %}"  class="UP" name="exp:{{x.id}}" value="UP"/>
@@ -77,6 +86,15 @@
                             note:
                         <canvas id="donexp{{x.id}}" name="{{x.approval_ratio}}" class="donut"></canvas>
                         </p>
+                        <p id="devexp{{x.id}}" style='text-align: center;'>
+                        {% if x.nb_exp != 0 or x.nb_q != 0 %}
+                            <div class="GetDebateChild" name="childexp{{x.id}}" id="childexp{{x.id}}"> Voir les réactions à ce commentaire </div>
+                        {% else %}
+                            Poser une question ou commentez cette réaction! <br>
+                            <button class="butexp" type="button" name="exp:exp:{{x.id}}"> Commenter </button>
+                            <button class="butqst" type="button" name="exp:qst:{{x.id}}">Poser votre question </button>
+                            <p id="expaskform{{x.id}}"></p>
+                        {% endif %}
                     {% elif x|isinst:'CreateYourLaws.models.Opinion' %}
                         <p class="vote">
                         <input type="image" src="{% static 'icons/thumbs_up.png' %}"  class="UP" name="opn:{{x.id}}" value="UP"/>
@@ -96,6 +114,23 @@
             </tr>
         {% endfor %}
 </table> 
+{% if typeform == 'expf' or typeform == 'qstf'%}
+    <h2>une autre réaction? Commentez ou posez votre question</h2>
+    <button class="butexp" name="{{typeref}}:exp:{{id_ref}}" type="button"> Commenter </button>
+    <button class="butqst" name="{{typeref}}:qst:{{id_ref}}" type="button">Poser votre question </button>
+    <p id="{{typeref}}askform{{id_ref}}"></p>
+{% elif typeform == 'prpf' %}
+    <button class="butprp" type="button">Faire une autre proposition <br>  que cette loi</button>
+    <form action="{% url 'PostReflection'%}"  method="post" id="prpform">
+        {{ prpform.as_p }} 
+        <input type="hidden" name="typeform" value="prpf">
+        <input type="hidden" name="typeref" value="{{typeref}}">
+        <input type="hidden" name="ref_id" value="{{ref.id}}">
+        <button type="submit" class="butprp" name="prpform">Poster votre proposition </button>
+    </form> 
+{% elif typeform == "opn" %}
+    Faut finir ici
+{% endif %}
 
 {% comment %}
             {% x|isinst:'CreateYourLaws.models.Explaination' %} 
