--- a/democratos/CreateYourLaws/templates/childcomments.html
+++ b/democratos/CreateYourLaws/templates/childcomments.html
@@ -3,7 +3,7 @@
 
 
 {% autoescape off %}
-<script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
+
 <table>
     <tbody>    
          {% for x in listcom %}
@@ -47,39 +47,36 @@
             <br>
             <hr>
             {% if x|isinst:'CreateYourLaws.models.Explaination' %}
-                <p id="devexp{{x.id}}" style='text-align: center;'>
+                <p id="devexp{{x.id}}" style='text-align: center;'></p>
             {% else %}
-                <p id="devqst{{x.id}}" style='text-align: center;'>
+                <p id="devqst{{x.id}}" style='text-align: center;'></p>
             {% endif %}
-                {% if x.nb_exp != 0 or x.nb_q != 0 %}
-                    {% if x|isinst:'CreateYourLaws.models.Explaination' %}
-                        <div class="GetDebateChild" name="childexp{{x.id}}" id="childexp{{x.id}}"> Voir les réactions à ce commentaire </div>
-                    {% else %}
-                        <div class="GetDebateChild" name="childqst{{x.id}}" id="childqst{{x.id}}"> Voir les réactions à ce commentaire </div>
-                    {% endif %}
+            {% if x.nb_exp != 0 or x.nb_q != 0 %}
+                {% if x|isinst:'CreateYourLaws.models.Explaination' %}
+                    <div class="GetDebateChild" name="childexp{{x.id}}" id="childexp{{x.id}}"> Voir les réactions à ce commentaire </div>
                 {% else %}
-                    Poser une question ou commentez cette réaction! <br>
-                    {% if x|isinst:'CreateYourLaws.models.Explaination' %}
-                        <button class="butexp" type="button" name="exp:exp:{{x.id}}"> Commenter </button>
-                        <button class="butqst" type="button" name="exp:qst:{{x.id}}">Poser votre question </button>
-                        <p id="expaskform{{x.id}}"></p>
-                    {% else %}
-                        <button class="butexp" type="button" name="qst:exp:{{x.id}}"> Commenter </button>
-                        <button class="butqst" type="button" name="qst:qst:{{x.id}}">Poser votre question </button>
-                        <p id="qstaskform{{x.id}}"></p>
-                    {% endif %}
+                    <div class="GetDebateChild" name="childqst{{x.id}}" id="childqst{{x.id}}"> Voir les réactions à ce commentaire </div>
                 {% endif %}
-
-                </p>
+            {% else %}
+                Poser une question ou commentez cette réaction! <br>
+                {% if x|isinst:'CreateYourLaws.models.Explaination' %}
+                    <button class="butexp" type="button" name="exp:exp:{{x.id}}"> Commenter </button>
+                    <button class="butqst" type="button" name="exp:qst:{{x.id}}">Poser votre question </button>
+                    <p id="expaskform{{x.id}}"></p>
+                {% else %}
+                    <button class="butexp" type="button" name="qst:exp:{{x.id}}"> Commenter </button>
+                    <button class="butqst" type="button" name="qst:qst:{{x.id}}">Poser votre question </button>
+                    <p id="qstaskform{{x.id}}"></p>
+                {% endif %}
+            {% endif %}
             </td>                   
         </tr>
-        {% empty %}
-            <h2>une réaction? Commentez ou posez votre question</h2>
         {% endfor %}
-        <button class="butexp" name="{{typeref}}:exp:{{id_ref}}" type="button"> Commenter </button>
-        <button class="butqst" name="{{typeref}}:qst:{{id_ref}}" type="button">Poser votre question </button>
-        <p id="{{typeref}}askform{{id_ref}}"></p>
     </tbody>
 </table> 
 
+    <h2> Commentez ou posez une question à propos de cette réaction </h2>
+    <button class="butexp" name="{{typeref}}:exp:{{id_ref}}" type="button"> Commenter </button>
+    <button class="butqst" name="{{typeref}}:qst:{{id_ref}}" type="button">Poser votre question </button>
+    <p id="{{typeref}}askform{{id_ref}}"></p>
 {% endautoescape %}
