--- a/democratos/CreateYourLaws/templates/childcomments.html
+++ b/democratos/CreateYourLaws/templates/childcomments.html
@@ -3,13 +3,13 @@
 
 
 {% autoescape off %}
-
-<table>
+<section id="{{typeref}}{{id_ref}}childcomments">
+    <table>
     <tbody>    
          {% for x in listcom %}
         <tr>
             {% if x|isinst:'CreateYourLaws.models.Explaination' %}    
-                <td class='explaination' id="exp:{{x.id}}"> {% comment %} <div class="IDB GetReflection" name="exp:{{x.id}}"> {% endcomment %} 
+                <td class='explaination' id="exptd{{x.id}}"> {% comment %} <div class="IDB GetReflection" name="exp:{{x.id}}"> {% endcomment %} 
                     {% if x.title %}
                         <strong>{{x.title}}</strong> <br/>
                         {{x.text_exp|truncatewords:80}} <br/>
@@ -17,7 +17,7 @@
                         <strong>{{x.text_exp}}</strong> <br/>
                     {% endif %}
             {% else %}
-                <td class='question' id="qst:{{x.id}}">  {% comment %} <div class="IDB GetReflection" name="qst:{{x.id}}"> {% endcomment %}
+                <td class='question' id="qsttd{{x.id}}">  {% comment %} <div class="IDB GetReflection" name="qst:{{x.id}}"> {% endcomment %}
                     {% if x.title %}
                         <strong>{{x.title}}</strong> <br/>
                         {{x.text_q|truncatewords:80}} <br/>
@@ -39,7 +39,7 @@
                 <input type="image" src="{% static 'icons/thumbs_up.png' %}"  class="UP" name="qst:{{x.id}}" value="UP"/>
                 <input type="image" src="{% static 'icons/thumbs_down.png' %}"  class="DOWN" name="qst:{{x.id}}" value="DOWN"/>
                 note:
-                <canvas id="donqst{{x.id}}" name="{{x.approval_ratio}}" class="donut"></canvas>
+                <canvas id="donqst{{x.id}}" name="{{x.approval_ratio}}" class="donut" height="36" width="47"></canvas>
             {% endif %}
             </p>
             <br>
@@ -58,15 +58,21 @@
                     <div class="GetDebateChild" name="childqst{{x.id}}" id="childqst{{x.id}}"> Voir les réactions à ce commentaire </div>
                 {% endif %}
             {% else %}
-                Poser une question ou commentez cette réaction! <br>
+                <br>
                 {% if x|isinst:'CreateYourLaws.models.Explaination' %}
+                <div id='exp{{x.id}}comments'>
+                    Poser une question ou commentez cette réaction! <br>
                     <button class="butexp" type="button" name="exp:exp:{{x.id}}"> Commenter </button>
                     <button class="butqst" type="button" name="exp:qst:{{x.id}}">Poser votre question </button>
                     <p id="expaskform{{x.id}}"></p>
+                </div>
                 {% else %}
+                <div id='qst{{x.id}}comments'>
+                    Poser une question ou commentez cette réaction! <br>
                     <button class="butexp" type="button" name="qst:exp:{{x.id}}"> Commenter </button>
                     <button class="butqst" type="button" name="qst:qst:{{x.id}}">Poser votre question </button>
                     <p id="qstaskform{{x.id}}"></p>
+                </div>
                 {% endif %}
             {% endif %}
             </td>                   
@@ -79,4 +85,5 @@
     <button class="butexp" name="{{typeref}}:exp:{{id_ref}}" type="button"> Commenter </button>
     <button class="butqst" name="{{typeref}}:qst:{{id_ref}}" type="button">Poser votre question </button>
     <p id="{{typeref}}askform{{id_ref}}"></p>
+</section>
 {% endautoescape %}
