--- a/democratos/CreateYourLaws/templates/GetReflection.html
+++ b/democratos/CreateYourLaws/templates/GetReflection.html
@@ -1,8 +1,37 @@
-{% load special_filters %}
+{% extends "base_CYL.html" %}
 {% load staticfiles %}
+{% load special_filters %}
 
 
-<script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
+{% block intro %}
+
+<h1> Où suis-je? </h1>
+<p> 
+    {% if typeref == 'loi' %}    <!--         The path to the Article           -->
+        {% for x in listparents %}
+            <var class="InDatBox" name="{{x|lookup:2}}:{{x|lookup:1}}"><strong>  {{x|lookup:0|truncatewords:4}}  </strong></var>  >>     
+        {% endfor %}
+        {{ref.title}}
+    {% elif typeref == 'prp' %}  
+        C'est une proposition!
+    {% else %}   <!--         The path to the reflection       -->
+        <var class="InDatBox" name="1:{{x|lookup:1}}"><strong>  {{ law_code.title|truncatewords:4}}  </strong></var>  >>  ...  >>
+        {% for x in list_parents %}
+            <var class="GetReflection" name="{{x|lookup:0}}:{{x|lookup:1}}"><strong>  {{x|lookup:2|truncatewords:4}}  </strong></var>  >>     
+        {% endfor %}
+        {% if ref.title %}    
+            {{ref.title|truncatewords:8}}
+        {% else %}
+            {{ref.text|truncatewords:8}}
+        {% endif %}
+    {% endif %}
+</p>
+
+{% endblock %}
+
+
+{% block content %}
+
 {% autoescape off %}
 
 <!--############################################################################################
@@ -340,3 +369,5 @@
 </section>
 
 {% endautoescape %}
+
+{% endblock %}
